--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -27,3 +27,15 @@ input[type='checkbox'] {
     border-radius: 5px;
     white-space: nowrap;
 }
+label.error{
+    margin-top: 10px;
+    padding: 8px 20px 8px 15px;
+    margin-bottom: 0px;
+    color: #c09853;
+    text-shadow: 0 1px 0 rgba(255, 255, 255, 0.5);
+    background-color: #fcf8e3;
+    border: 1px solid #fbeed5;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    border-radius: 4px;
+}
